# mcp-sqlalchemy

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup-pre-commit.sh
.github/workflows/: pypi-publish.yml
src/mcp_sqlalchemy/: __init__.py  __main__.py  _dev.py  server.py
src/mcpserver/: __init__.py  __main__.py
