[project]
name = "mcp-sqlalchemy"
version = "0.2.3"
description = "MCP server for SQLAlchemy database interactions - supports SQLite, PostgreSQL, and MySQL"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Tomer Gabay", email = "tomer.gabay@woonstadrotterdam.nl"},
    {name = "Ben Verhees", email = "ben.verhees@woonstadrotterdam.nl"},
]
keywords = ["mcp", "sqlalchemy", "database", "postgresql", "mysql", "sqlite"]
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "aiosqlite>=0.21.0",
    "greenlet>=3.0.0",
    "mcp[cli]>=1.12.2",
    "sqlalchemy>=2.0.42",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
postgresql = ["asyncpg>=0.28.0"]
mysql = ["aiomysql>=0.1.1"]
all = ["mcp-sqlalchemy[postgresql]", "mcp-sqlalchemy[mysql]"]

[project.scripts]
mcp-sqlalchemy= "mcp_sqlalchemy.__main__:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
]
